# liquidhaskell-cabal

./: LICENSE  README.md  default.nix  liquidhaskell-cabal.cabal  release.nix  stack.yaml
nix/: nixpkgs.json  nixpkgs.nix
src/LiquidHaskell/: Cabal.hs
