name:                  liquidhaskell-cabal
version:               0.1.0.0
synopsis:              Liquid Haskell integration for Cabal and Stack
description:           Please see README.md
homepage:              https://github.com/spinda/liquidhaskell-cabal#readme
license:               BSD3
license-file:          LICENSE
author:                Michael Smith
maintainer:            michael@spinda.net
copyright:             2016 Michael Smith
category:              Development
build-type:            Simple
cabal-version:         >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LiquidHaskell.Cabal
  build-depends:       base >= 4.6 && < 5
                     , Cabal >= 1.18 && < 1.23
                     , filepath
  default-language:    Haskell2010

source-repository head
  type:                git
  location:            https://github.com/spinda/liquidhaskell-cabal

