name:                  liquidhaskell-cabal
version:               0.1.1.0
synopsis:              Liquid Haskell integration for Cabal and stack
description:           Provides support for checking projects using Cabal
                       and/or stack with LiquidHaskell.
                       
                       Please see the
                       <https://github.com/spinda/liquidhaskell-cabal/blob/0.1.1.0/README.md README>
                       on GitHub for setup and usage instructions.
homepage:              https://github.com/spinda/liquidhaskell-cabal#readme
bug-reports:           https://github.com/spinda/liquidhaskell-cabal/issues
license:               BSD3
license-file:          LICENSE
author:                Michael Smith
maintainer:            Michael Smith <michael@spinda.net>
copyright:             2016 Michael Smith
category:              Development
build-type:            Simple
cabal-version:         >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LiquidHaskell.Cabal
  build-depends:       base >= 4.4 && < 5
                     , Cabal >= 1.18 && < 1.26
                     , filepath >= 1.3 && <1.5
  default-language:    Haskell2010

source-repository head
  type:                git
  location:            https://github.com/spinda/liquidhaskell-cabal

